cmake_minimum_required(VERSION 2.8)
project(Turing-Vision)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
find_package(OpenCV REQUIRED)
find_package(GStreamer REQUIRED)
find_package(GLIB REQUIRED COMPONENTS)
include_directories(${GSTREAMER_APP_INCLUDE_DIRS})
add_executable(vision vision.cpp stream.cpp)
target_link_libraries(vision ${OpenCV_LIBS} ${GSTREAMER_LIBRARIES} ${GLIB_LIBRARIES} ${GLIB_GOBJECT_LIBRARIES} -lgstrtspserver-1.0 -lgobject-2.0)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
